--- a/shell_script_by_sample/5.design_cmd_user_interface.md
+++ b/shell_script_by_sample/5.design_cmd_user_interface.md
@@ -1,4 +1,4 @@
-# 设计 Command line Interface 的三的 Pattern
+# 设计 Command line Interface 的三个 Pattern
 
 在我们讨论 User Interface 的时候，通常讨论的是 Graph User Interface (GUI)。在我们创建 Command line 工具的时候，好的 User Interface 可以让工具具有很好的用户体验。这种交互方式成为 Command line Interface。比如 `Git` 就是一个非常优秀的 Command line Interface 案例。
 
