Fix spell, add image

--- a/shell_script_by_sample/5.design_cmd_user_interface.md
+++ b/shell_script_by_sample/5.design_cmd_user_interface.md
@@ -1,6 +1,8 @@
 # 设计 Command line Interface 的三个 Pattern
 
-在我们讨论 User Interface 的时候，通常讨论的是 Graph User Interface (GUI)。在我们创建 Command line 工具的时候，好的 User Interface 可以让工具具有很好的用户体验。这种交互方式成为 Command line Interface。比如 `Git` 就是一个非常优秀的 Command line Interface 案例。
+![VT100 serial terminal](images/5.1_VT100_serial_terminal.jpg)
+
+在我们讨论 User Interface 的时候，通常讨论的是 Graph User Interface (GUI)。在我们创建 Command line 工具的时候，好的 User Interface 可以让工具具有很好的用户体验。这种交互方式称为 Command line Interface。比如 `Git` 就是一个非常优秀的 Command line Interface 案例。
 
 本文将介绍设计 Command line Interface 的三个 Pattern。
 
@@ -110,7 +112,7 @@ Initializing database
 * 处理 Sub-Command
 * 在 Sub-Command 中处理参数
 
-我们对上面的 `run-mysql` 再进行改造，让他直接 `run` 和 `kill` 两个 `Sub-Command`。
+我们对上面的 `run-mysql` 再进行改造，让它支持 `run` 和 `kill` 两个 `Sub-Command`。
 
 例如：
 
@@ -250,11 +252,12 @@ Commands:
     delete [test|prod] [STACK-NAME ...]     Delete SNS and SQS stack
 ```
 
+
 ## 总结
 
 一个好的 Command line 应该易于理解和使用。按照本文提到的三个 Pattern 可以帮助你设计一个易用的 Command line Interface。
 
-引用一段[来自程序员的高效注释](http://blog.jobbole.com/105813/)以供自勉：
+引用一段[来自程序员的搞笑注释](http://blog.jobbole.com/105813/)以供自勉：
 
 > // 写这段代码的时候，只有上帝和我知道它是干嘛的
 > // 现在只有上帝知道
